Add navbar and footer resposive

--- a/index.html
+++ b/index.html
@@ -8,22 +8,24 @@
 </head>
 <body>
   <nav class="navbar">
-    <button>
+    <button class="navbar-burguer">
       <img class="navbar-btn" src="assets/icon-menu-burguer.svg" alt="icon-burguer">
     </button>
-    <a href="">Moda mujer</a>
-    <a href="">Moda Hombre</a>
-    <a href="">Nueva colección</a>
-    <a href="">Colecciones</a>
+    <ul class="navbar-links">
+      <li class="navbar-link"><a href="">Moda mujer</a></li>
+      <li class="navbar-link"><a href="">Moda Hombre</a></li>
+      <li class="navbar-link"><a href="">Nueva colección</a></li>
+      <li class="navbar-link"><a href="">Colecciones Especiales</a></li>
+    </ul>
     <div class="navbar-btns__container">
       <button> 
-        <img class="navbar-btn" src="assets/icon-user.svg" alt="icon-burguer">
+        <img class="navbar-btn" src="assets/icon-user.svg" alt="icon-user">
       </button>
       <button> 
-        <img class="navbar-btn" src="assets/icon-heart.svg" alt="icon-burguer">
+        <img class="navbar-btn" src="assets/icon-heart.svg" alt="icon-heart">
       </button>
       <button> 
-        <img class="navbar-btn" src="assets/icon-shopping-cart.svg" alt="icon-burguer">
+        <img class="navbar-btn" src="assets/icon-shopping-cart.svg" alt="icon-shopping-cart">
       </button>
     </div>
   </nav>
@@ -74,5 +76,30 @@
       </li>
     </ul>
   </main>
+  <footer class="footer">
+    <ul class="footer-list">
+      <li class="footer-list__item">
+        <div class="item-icon__container">
+          <img class="item-icon" src="assets/icon-truck.svg" alt="icon-truck">
+        </div>
+        <p class="item-text">Entregas</p>
+      </li>
+      <li class="footer-list__item">
+        <p class="item-text">Devoluciones y cambios</p>
+      </li>
+      <li class="footer-list__item">
+        <div class="item-icon__container">
+          <img class="item-icon" src="assets/icon-phone.svg" alt="icon-phone">
+        </div>
+        <p class="item-text">+375(29) 749-18-23</p>
+      </li>
+      <li class="footer-list__item">
+        <div class="item-icon__container">
+          <img class="item-icon" src="assets/icon-mail.svg" alt="icon-mail">
+        </div>
+        <p class="item-text">shop@omix.com</p>
+      </li>
+    </ul>
+  </footer>
 </body>
 </html>
